--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -85,12 +85,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mappings\AppointmentMap.cs" />
+    <Compile Include="Mappings\CategoryMap.cs" />
+    <Compile Include="Mappings\SymptomMap.cs" />
     <Compile Include="Mappings\SpecialityMap.cs" />
     <Compile Include="Mappings\IcdDiseaseMap.cs" />
     <Compile Include="Mappings\IcdBlockMap.cs" />
     <Compile Include="Mappings\IcdChapterMap.cs" />
     <Compile Include="Mappings\DiagnosisMap.cs" />
-    <Compile Include="Mappings\SymptomMap.cs" />
+    <Compile Include="Mappings\WordMap.cs" />
     <Compile Include="Mappings\HealthRecordMap.cs" />
     <Compile Include="Mappings\DoctorMap.cs" />
     <Compile Include="Mappings\CourseMap.cs" />
@@ -98,17 +100,22 @@
     <Compile Include="Mappings\PropertyMap.cs" />
     <Compile Include="Mappings\PatientPropertyMap.cs" />
     <Compile Include="Mappings\PatientMap.cs" />
+    <Compile Include="Models\Checkers.cs" />
+    <Compile Include="Models\RecordCategory.cs" />
     <Compile Include="Models\Speciality.cs" />
     <Compile Include="Models\IcdChapter.cs" />
     <Compile Include="Models\IcdBlock.cs" />
     <Compile Include="Models\IcdDisease.cs" />
     <Compile Include="Models\PatientRecordProperty.cs" />
+    <Compile Include="Models\Symptom.cs" />
     <Compile Include="NHibernate\Net4Collections.cs" />
     <Compile Include="NHibernate\NHibHelper.cs" />
+    <Compile Include="Repositories\CategoryRepository.cs" />
+    <Compile Include="Repositories\SymptomRepository.cs" />
     <Compile Include="Repositories\IcdChapterRepository.cs" />
     <Compile Include="Repositories\IcdDiseaseRepository.cs" />
     <Compile Include="Repositories\DiagnosisRepository.cs" />
-    <Compile Include="Repositories\SymptomRepository.cs" />
+    <Compile Include="Repositories\WordRepository.cs" />
     <Compile Include="Repositories\ModelRepository.cs" />
     <Compile Include="Repositories\DoctorRepository.cs" />
     <Compile Include="Repositories\PropertyRepository.cs" />
@@ -122,7 +129,7 @@
     <Compile Include="Models\Patient.cs" />
     <Compile Include="Models\Property.cs" />
     <Compile Include="Models\PropertyValue.cs" />
-    <Compile Include="Models\Symptom.cs" />
+    <Compile Include="Models\Word.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\PatientRepository.cs" />
   </ItemGroup>
