--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -191,22 +191,22 @@
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
     <Compile Include="DateOffset.cs" />
-    <Compile Include="ViewModels\CategoryViewModel.cs" />
+    <Compile Include="ViewModels\Domain\CategoryViewModel.cs" />
     <Compile Include="ViewModels\Managers\CategoryManager.cs" />
     <Compile Include="ViewModels\Managers\SymptomsManager.cs" />
     <Compile Include="ViewModels\Managers\WordsManager.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="ViewModels\Search\SymptomSearch.cs" />
-    <Compile Include="ViewModels\SymptomViewModel.cs" />
+    <Compile Include="ViewModels\Domain\SymptomViewModel.cs" />
     <Compile Include="ViewModels\HierarchicalCheckable.cs" />
     <Compile Include="ViewModels\Managers\DiagnosisManager.cs" />
     <Compile Include="ViewModels\Managers\CoursesManager.cs" />
     <Compile Include="ViewModels\Interfaces\ISearchCommon.cs" />
-    <Compile Include="ViewModels\AppointmentViewModel.cs" />
-    <Compile Include="ViewModels\HealthRecordViewModel.cs" />
+    <Compile Include="ViewModels\Domain\AppointmentViewModel.cs" />
+    <Compile Include="ViewModels\Domain\HealthRecordViewModel.cs" />
     <Compile Include="ViewModels\Managers\DoctorsManager.cs" />
-    <Compile Include="ViewModels\CourseViewModel.cs" />
-    <Compile Include="ViewModels\DoctorViewModel.cs" />
+    <Compile Include="ViewModels\Domain\CourseViewModel.cs" />
+    <Compile Include="ViewModels\Domain\DoctorViewModel.cs" />
     <Compile Include="ViewModels\EditableBase.cs" />
     <Compile Include="ViewModels\Search\DiagnosisAutoComplete.cs" />
     <Compile Include="ViewModels\Search\HierarchicalSearch.cs" />
@@ -245,7 +245,7 @@
     <Compile Include="ViewModels\Search\AutoCompleteBase.cs" />
     <Compile Include="ViewModels\CheckableBase.cs" />
     <Compile Include="ViewModels\Search\DiagnosisSearch.cs" />
-    <Compile Include="ViewModels\DiagnosisViewModel.cs" />
+    <Compile Include="ViewModels\Domain\DiagnosisViewModel.cs" />
     <Compile Include="ViewModels\HierarchicalBase.cs" />
     <Compile Include="ViewModels\Interfaces\ICheckable.cs" />
     <Compile Include="ViewModels\Interfaces\IHierarchical.cs" />
@@ -257,18 +257,18 @@
     <Compile Include="ViewModels\Search\PatientSearch.cs" />
     <Compile Include="ViewModels\Managers\PatientsManager.cs" />
     <Compile Include="ViewModels\Managers\PropertyManager.cs" />
-    <Compile Include="ViewModels\PropertyViewModel.cs" />
+    <Compile Include="ViewModels\Domain\PropertyViewModel.cs" />
     <Compile Include="ViewModels\HierarchicalExplorer.cs" />
     <Compile Include="ViewModels\RelayCommand.cs" />
     <Compile Include="ViewModels\Search\SearchBase.cs" />
     <Compile Include="ViewModels\Search\WordAutoComplete.cs" />
     <Compile Include="ViewModels\Search\WordSearch.cs" />
-    <Compile Include="ViewModels\WordViewModel.cs" />
+    <Compile Include="ViewModels\Domain\WordViewModel.cs" />
     <Compile Include="Controls\Directory\FullTree.xaml.cs">
       <DependentUpon>FullTree.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\ViewModelBase.cs" />
-    <Compile Include="ViewModels\PatientViewModel.cs" />
+    <Compile Include="ViewModels\Domain\PatientViewModel.cs" />
     <Page Include="Controls\AutoComplete.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
