--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -51,12 +51,17 @@
   </Choose>
   <ItemGroup>
     <Compile Include="DateOffsetTest.cs" />
+    <Compile Include="PatientTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Diagnosis.App\Diagnosis.App.csproj">
       <Project>{d7949590-a383-4e34-9c06-a2568db5cdb6}</Project>
       <Name>Diagnosis.App</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Diagnosis.Data\Diagnosis.Data.csproj">
+      <Project>{3ec8d3df-aa44-4cb8-8847-d4b4872e9dad}</Project>
+      <Name>Diagnosis.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
