--- a/Diagnosis.App/packages.config
+++ b/Diagnosis.App/packages.config
@@ -4,4 +4,5 @@
   <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
   <package id="NHibernate.JetDriver" version="2.0.0.1001" targetFramework="net40" />
+  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net40" />
 </packages>
