--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\Diagnosis.App\packages.config" />
   <repository path="..\Diagnosis.Data\packages.config" />
+  <repository path="..\Tests\packages.config" />
 </repositories>
