--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Converters\BoolToSexSign.cs" />
     <Compile Include="Converters\CountToAppointmentsLabel.cs" />
     <Compile Include="Converters\IntToString.cs" />
+    <Compile Include="DebugOutput.cs" />
     <Compile Include="EntityManagers.cs" />
     <Compile Include="Extensions\ConvertExtensions.cs" />
     <Compile Include="MessagingParams.cs" />
