--- a/Diagnosis.Core/Diagnosis.Core.csproj
+++ b/Diagnosis.Core/Diagnosis.Core.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -40,8 +41,29 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DateOffset.cs" />
+    <Compile Include="Models\Appointment.cs" />
+    <Compile Include="Checkers.cs" />
+    <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\Diagnosis.cs" />
+    <Compile Include="Models\Doctor.cs" />
+    <Compile Include="Models\HealthRecord.cs" />
+    <Compile Include="Models\IcdBlock.cs" />
+    <Compile Include="Models\IcdChapter.cs" />
+    <Compile Include="Models\IcdDisease.cs" />
+    <Compile Include="Models\Patient.cs" />
+    <Compile Include="Models\PatientRecordProperty.cs" />
+    <Compile Include="Models\Property.cs" />
+    <Compile Include="Models\PropertyValue.cs" />
+    <Compile Include="Models\RecordCategory.cs" />
+    <Compile Include="Models\Speciality.cs" />
+    <Compile Include="Models\Symptom.cs" />
+    <Compile Include="Models\SymptomWords.cs" />
+    <Compile Include="Models\Word.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModelBase.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Models\ModelsClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
