checkable CategoryViewModel (works only if there is one CategoryChooser on screen)

--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -168,6 +168,7 @@
       <DependentUpon>TreeItemLight.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Directory\TreeTemplateSelector.cs" />
+    <Compile Include="Controls\Helpers\ParentFinder.cs" />
     <Compile Include="Controls\SearchTree.xaml.cs">
       <DependentUpon>SearchTree.xaml</DependentUpon>
     </Compile>
