--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -237,6 +237,7 @@
     <Compile Include="ViewModels\Search\Combination.cs" />
     <Compile Include="ViewModels\Search\HrSearcher.cs" />
     <Compile Include="ViewModels\Search\HrSearchOptions.cs" />
+    <Compile Include="ViewModels\Search\SearcherSettings.cs" />
     <Compile Include="ViewModels\Search\SearchTester.cs" />
     <Compile Include="ViewModels\Search\SearchViewModel.cs" />
     <Compile Include="ViewModels\Search\WordAutoCompleteComposite.cs" />
